<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>nz.co.gregs</groupId>
  <artifactId>separatedstring</artifactId>
  <version>2.8-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>SeparatedString</name>
  <description>A fluent API to generate and parse CSV and bracketed lists that got really out of control and now does a ridiculous amount of useful stuff like formatting cluster hosts with SeparatedStringBuilder.forSeparator("|").withPrefix("&lt;").withSuffix("&gt;").withEscapeChar("!")</description>
  <url>https://github.com/gregorydgraham/SeparatedString</url>
  <licenses>
    <license>
      <name>Non-commercial License</name>
      <url>https://dbvolution.com/noncommercial_license.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
	
	
  <developers>
    <developer>
      <name>Gregory Graham</name>
      <email>info@gregs.co.nz</email>
      <url>http://gregs.co.nz</url>
      <timezone>+12</timezone>
      <roles>
        <role>developer</role>
      </roles>
    </developer>
  </developers>

  <scm>
    <url>https://github.com/gregorydgraham/SeparateString</url>
    <connection>scm:git:https://github.com/gregorydgraham/SeparatedString.git</connection>
    <developerConnection>scm:git:https://github.com/gregorydgraham/SeparatedString.git</developerConnection>
    <tag>separatedstring-1.8.1</tag>
  </scm>
		
  <dependencies>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-all</artifactId>
      <version>1.3</version>
      <scope>test</scope>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>nz.co.gregs</groupId>
      <artifactId>looper</artifactId>
      <version>1.3</version>
      <scope>test</scope>
      <type>jar</type>
    </dependency>
  </dependencies>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>10</maven.compiler.source>
    <maven.compiler.target>10</maven.compiler.target>
  </properties>
  
  <distributionManagement>
  </distributionManagement>
  
  <profiles>
    <profile> 
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.3.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.2.7</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.11.2</version>
            <configuration>
              <additionalOptions>-html5</additionalOptions>
            </configuration>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.7.0</version>
        <extensions>true</extensions>
        <configuration>
          <publishingServerId>sonatype-central</publishingServerId>
          <centralBaseUrl>https://central.sonatype.com</centralBaseUrl>
          <autoPublish>true</autoPublish>
          <waitUntil>published</waitUntil>
          <failOnBuildFailure>true</failOnBuildFailure>
        </configuration>
      </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  <build>
    <plugins>
      <!-- 
        You can perform a release deployment to Sonatype Central with
      
        "mvn release:clean release:prepare"
        
        then answering the prompts for versions and tags, followed by
      
        "mvn release:perform"
        
        Beware though: bit-rot occurs and things have probably changed
      -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <autoVersionSubmodules>true</autoVersionSubmodules>
          <!-- sonatype prefer their own release profile -->
          <useReleaseProfile>false</useReleaseProfile>
          <!-- release profile as defined by Sonatype -->
          <releaseProfiles>release</releaseProfiles>
          <goals>deploy</goals>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.11.2</version>
        <configuration>
          <additionalOptions>-html5</additionalOptions>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.2</version>
        <executions>
          <execution>
            <id>default-prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>default-report</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
          <execution>
            <id>default-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <haltOnFailure>false</haltOnFailure>
              <rules>
                <!-- implementation is needed only for Maven 2 -->
                <rule implementation="org.jacoco.maven.RuleConfiguration">
                  <element>METHOD</element>
<!--                  <excludes>
                    <exclude>*deprecated*</exclude>
                    <exclude>*databases*</exclude>
                    <exclude>*internal*</exclude>
                    <exclude>*exceptions*</exclude>
                    <exclude>*QueryGraphVisualisationTest</exclude>
                    <exclude>*DBExtractor</exclude>
                    <exclude>xFunc</exclude>
                  </excludes>-->
                  <limits><!-- implementation is needed only for Maven 2 -->
                    <limit implementation="org.jacoco.report.check.Limit">
                      <counter>INSTRUCTION</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0.10</minimum>
                    </limit>
                  </limits>
                </rule>
                <rule implementation="org.jacoco.maven.RuleConfiguration">
                  <element>CLASS</element>
<!--                  <excludes>
                    <exclude>*deprecated*</exclude>
                    <exclude>*databases*</exclude>
                    <exclude>*internal*</exclude>
                    <exclude>*exceptions*</exclude>
                    <exclude>*QueryGraphVisualisationTest</exclude>
                    <exclude>*DBExtractor</exclude>
                    <exclude>*DBByteArray</exclude> Deprecated class does not need testing 
                  </excludes>-->
                  <limits>
                    <limit>
                      <counter>LINE</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0.23</minimum>
                    </limit>
                  </limits>
                </rule>
                <!-- implementation is needed only for Maven 2 -->
                <rule implementation="org.jacoco.maven.RuleConfiguration">
                  <element>PACKAGE</element>
<!--                  <excludes>
                    <exclude>*databases*</exclude>
                    <exclude>*internal*</exclude>
                    <exclude>*exceptions*</exclude>
                    <exclude>*QueryGraphVisualisationTest</exclude>
                    <exclude>*DBExtractor</exclude>
                  </excludes>-->
                  <limits><!-- implementation is needed only for Maven 2 -->
                    <limit implementation="org.jacoco.report.check.Limit">
                      <counter>INSTRUCTION</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0.20</minimum>
                    </limit>
                  </limits>
                </rule>
                <!-- implementation is needed only for Maven 2 -->
                <rule implementation="org.jacoco.maven.RuleConfiguration">
                  <element>BUNDLE</element>
<!--                  <excludes>
                    <exclude>*databases*</exclude>
                    <exclude>*internal*</exclude>
                    <exclude>*exceptions*</exclude>
                    <exclude>*QueryGraphVisualisationTest</exclude>
                    <exclude>*DBExtractor</exclude>
                  </excludes>-->
                  <limits><!-- implementation is needed only for Maven 2 -->
                    <limit implementation="org.jacoco.report.check.Limit">
                      <counter>INSTRUCTION</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0.10</minimum>
                    </limit>
                  </limits>
                </rule>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>